Masimomeets website added

--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
                 <div class="phone">
                     <img src="./assets/phone.png" alt="Phone Image">
                     <div class="phoneScreen">
-                        <img src="" alt="" class="phoneApp">
+                        <img src="./assets/masimomeets.png" alt="Masimomeets website image" class="phoneApp">
                     </div>
                 </div>
                 <div class="projectDetail">
-                    <div class="projectTitle">Vortex</div>
-                    <p class="projectDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis aspernatur qui ipsa rerum voluptate officia temporibus asperiores illo nisi. Sed, iste inventore odit consectetur facere soluta quas eos doloremque repellat!</p>
-                    <a href=""><button class="projectButton">Learn More</button></a>
+                    <div class="projectTitle">Masimomeets</div>
+                    <p class="projectDescription">Designed a resturant website UI using ReactJs, NextJs and Tailwind CSS. This is a complete design of a resturant website and compatible with all devices.</p>
+                    <a href="https://masimomeets.vercel.app/"><button class="projectButton">Learn More</button></a>
                 </div>
             </div>
             <div class="project">
                 <div class="laptop">
                     <img src="./assets/laptop.png" alt="Laptop Image" class="laptopImage">
                     <div class="laptopScreen">
-                        <img src="./assets/socialiser.png" alt="" class="laptopApp">
+                        <img src="./assets/socialiser.png" alt="Socialiser website image" class="laptopApp">
                     </div>
                 </div>
                 <div class="projectDetail">
