--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <ul class="social">
                     <li><a href="https://www.linkedin.com/in/rajatlinks/" class="socialLinks"><img src="./assets/linkedin.png" alt=""></a></li>
                     <li><a href="https://www.instagram.com/rajat.igs/" class="socialLinks"><img src="./assets/instagram.png" alt=""></a></li>
-                    <li><a href="https://www.twitter.com/rajattwts/" class="socialLinks"><img src="./assets/twitter.png" alt=""></a></li>
+                    <li><a href="https://x.com/rajattwts" class="socialLinks"><img src="./assets/x.png" alt=""></a></li>
                     <li><a href="mailto:rajatrajemails@gmail.com" class="socialLinks"><img src="./assets/mail.png" alt=""></a></li>
                 </ul>
             </nav>
