Masimomeets description updated

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <h2 class="jobTitle">and Designer</h2>
             </div>
         </section>
+
         <!-- PROJECTS -->
         <section class="projects">
             <h1 class="projectsTitle">Here are some of my projects</h1>
@@ -51,7 +52,7 @@
                 </div>
                 <div class="projectDetail">
                     <div class="projectTitle">Masimomeets</div>
-                    <p class="projectDescription">Designed a resturant website UI using ReactJs, NextJs and Tailwind CSS. This is a complete design of a resturant website and compatible with all devices.</p>
+                    <p class="projectDescription">Designed a comprehensive digital platform specifically for restaurants that integrated all necessary functionalities while ensuring mobile responsiveness using ReactJs, NextJs and Tailwind CSS to enhance application performance, achieved a 45% improvement in load times of website.</p>
                     <a href="https://masimomeets.vercel.app/"><button class="projectButton">Learn More</button></a>
                 </div>
             </div>
@@ -82,6 +83,7 @@
                 </div>
             </div>
         </section>
+
         <!-- GITHUB -->
         <section class="githubContainer">
             <div class="githubTitle">Want to see all projects?</div>
@@ -108,6 +110,7 @@
                 <h1 class="githubTitle">ON GITHUB</h1>
             </div>
         </section>
+
         <!-- CONTACT -->
         <section class="contact">
             <div class="contactText">Want to Connect!</div>
@@ -131,6 +134,7 @@
                 </div>
             </div>
         </section>
+
         <!-- FOOTER -->
         <footer class="footer">
             <p class="developer">Copyright © Rajat, All rights reserverd.</p>
