--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <h2 class="name">I'm Rajat</h2>
             </div>
             <div class="jobTitleContainer dark">
-                <h2 class="jobTitle">a Web Developer</h2>
+                <h2 class="jobTitle">a Full Stack Developer</h2>
             </div>
             <div class="jobTitleContainer purple">
-                <h2 class="jobTitle">and Designer</h2>
+                <h2 class="jobTitle">and Web Designer</h2>
             </div>
         </section>
 
