--- a/index.html
+++ b/index.html
@@ -47,26 +47,26 @@
                 <div class="phone">
                     <img src="./assets/phone.png" alt="Phone Image">
                     <div class="phoneScreen">
-                        <img src="./assets/masimomeets.png" alt="Masimomeets website image" class="phoneApp">
-                    </div>
-                </div>
-                <div class="projectDetail">
-                    <div class="projectTitle">Masimomeets</div>
-                    <p class="projectDescription">Designed a comprehensive digital platform specifically for restaurants that integrated all necessary functionalities while ensuring mobile responsiveness using ReactJs, NextJs and Tailwind CSS to enhance application performance, achieved a 45% improvement in load times of website.</p>
-                    <a href="https://masimomeets.vercel.app/"><button class="projectButton">Learn More</button></a>
-                </div>
-            </div>
-            <div class="project">
-                <div class="laptop">
-                    <img src="./assets/laptop.png" alt="Laptop Image" class="laptopImage">
-                    <div class="laptopScreen">
-                        <img src="./assets/socialiser.png" alt="Socialiser website image" class="laptopApp">
+                        <img src="./assets/socialiser.png" alt="Socialiser website image" class="phoneApp">
                     </div>
                 </div>
                 <div class="projectDetail">
                     <div class="projectTitle">Socialiser</div>
                     <p class="projectDescription">Developed a SMMA website using ReactJs, NextJs with MongoDB and CSS for styling, and for authentication i used AuthJs, This is a complete full stack website responsive with all devices. Implemented Google OAuth also for good user experience and Blog page as well as Admin panel to write and delete the blogs.</p>
                     <a href="https://socialiser.vercel.app/"><button class="projectButton">Learn More</button></a>
+                </div>
+            </div>
+            <div class="project">
+                <div class="laptop">
+                    <img src="./assets/laptop.png" alt="Laptop Image" class="laptopImage">
+                    <div class="laptopScreen">
+                        <img src="./assets/alignect.png" alt="Alignect website image" class="laptopApp">
+                    </div>
+                </div>
+                <div class="projectDetail">
+                    <div class="projectTitle">Alignect</div>
+                    <p class="projectDescription">Developed a cutting-edge project management platform to streamline project tracking and boost efficiency, utilizing the power of the latest technologies, ultimately driving increased site traffic. Integrated the comprehensive architecture with Next.js, React.js, Hono.js, Tailwind CSS and Appwrite to optimize performance. This strategic approach resulted in a significant 36% reduction in website load time</p>
+                    <a href="https://alignect.vercel.app/"><button class="projectButton">Learn More</button></a>
                 </div>
             </div>
             <div class="project">
