--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="projectDetail">
                     <div class="projectTitle">Alignect</div>
-                    <p class="projectDescription">Developed a cutting-edge project management platform to streamline project tracking and boost efficiency, utilizing the power of the latest technologies, ultimately driving increased site traffic. Integrated the comprehensive architecture with Next.js, React.js, Hono.js, Tailwind CSS and Appwrite to optimize performance. This strategic approach resulted in a significant 36% reduction in website load time</p>
+                    <p class="projectDescription">Developed a cutting-edge project management platform to streamline project tracking and boost efficiency, utilizing the power of the latest technologies, ultimately driving increased site traffic. Integrated the comprehensive architecture with Next.js, React.js, Hono.js, Tailwind CSS and Appwrite to optimize performance. This strategic approach resulted in a significant 36% reduction in website load time.</p>
                     <a href="https://alignect.vercel.app/"><button class="projectButton">Learn More</button></a>
                 </div>
             </div>
@@ -116,10 +116,10 @@
             <div class="contactText">Want to Connect!</div>
             <nav>
                 <ul class="social">
-                    <li><a href="https://www.linkedin.com/in/rajatlinks/" class="socialLinks"><img src="./assets/linkedin.png" alt=""></a></li>
-                    <li><a href="https://www.instagram.com/rajat.igs/" class="socialLinks"><img src="./assets/instagram.png" alt=""></a></li>
-                    <li><a href="https://x.com/rajattwts" class="socialLinks"><img src="./assets/x.png" alt=""></a></li>
-                    <li><a href="mailto:rajatrajemails@gmail.com" class="socialLinks"><img src="./assets/mail.png" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/rajatlinks/" class="socialLinks"><img src="./assets/linkedin.png" alt="LinkedIn logo"></a></li>
+                    <li><a href="https://www.instagram.com/rajat.igs/" class="socialLinks"><img src="./assets/instagram.png" alt="Instagram logo"></a></li>
+                    <li><a href="https://x.com/rajattwts" class="socialLinks"><img src="./assets/x.png" alt="X logo"></a></li>
+                    <li><a href="mailto:rajatrajemails@gmail.com" class="socialLinks"><img src="./assets/mail.png" alt="Gmail logo"></a></li>
                 </ul>
             </nav>
             <div class="connect">
